crates/pixi_build_go/src/snapshots/pixi_build_go__tests__env_vars_are_set.snap
---
source: crates/pixi_build_go/src/main.rs
expression: generated_recipe.recipe.build.plan.script().unwrap()
---
env:
  foo: bar
content: "[ ... script ... ]"
